--- a/pages/actReg/actRegListInfo/actRegListInfo.wxml
+++ b/pages/actReg/actRegListInfo/actRegListInfo.wxml
@@ -43,7 +43,7 @@
     <view class='actRegInfoText'>
         <view class='empty'></view>
         <view class='actRegInfoTextTitle'>活动详情</view>
-        <view class='actRegInfoTextContent'>{{pageData.rule}}</view>
+        <view class='actRegInfoTextContent'><text>{{pageData.rule}}</text></view>
         <view class='actRegInfoTextImage' wx:for='{{pageData.act_image}}'><image src='{{item.url}}' mode='widthFix'></image></view>
         <view class='empty'></view>
     </view>
