--- a/pages/collage/collageManList/collageManList.wxss
+++ b/pages/collage/collageManList/collageManList.wxss
@@ -46,6 +46,12 @@ page{
     min-height:80rpx;
     line-height:80rpx;
 }
+.contentTitle>view:nth-child(1){
+    width:650rpx;
+    overflow: hidden;
+    white-space: nowrap; 
+    text-overflow:ellipsis;
+}
 .contentTitle view:nth-child(2){
     float:right;
     color:#7b7b7b;
