--- a/pages/collectAct/collectActManList/collectActManList.wxml
+++ b/pages/collectAct/collectActManList/collectActManList.wxml
@@ -4,19 +4,19 @@
     <view bindtap='pageOpt' data-id='1'>发布新活动</view>
 </view>
 <!-- 内容 -->
-<view class='manListContent'>
-    <view class='contentTitle' bindtap='toActInfo'>
-        <view>六一儿童节,集赞赢大礼包</view>
+<view class='manListContent' wx:for='{{pageData}}' wx:key='{{item.id}}'>
+    <view class='contentTitle' bindtap='toActInfo' data-actid='{{item.id}}'>
+        <view>{{item.title}}</view>
         <view>〉</view>
     </view>
     <view class='contentMiddel'>
-        <view class='contetnMiddleLeft'><image mode='scaleToFill'></image></view>
+        <view class='contetnMiddleLeft'><image src='{{item.banner_image_url}}' mode='scaleToFill'></image></view>
         <view class='contetnMiddleRight'>
-            <view>查看报名<text>(5)</text></view>
-            <view>活动状态:<text style='color:green'>活动正在进行</text></view>
-            <view>开始时间:<text> 2018-01-20 00:00</text></view>
+            <view bindtap='toJoinList' data-actid='{{item.id}}'>查看报名<text>({{item.joiner_amount}})</text></view>
+            <view>活动状态:<text style='color:{{item.statusColor}}'>{{item.statusText}}</text></view>
+            <view>开始时间:<text> {{item.start_time}}</text></view>
             <!-- <view>砍价幅度:<text> {{item.}}</text></view> -->
-            <view>结束时间:<text> 2018-01-20 00:00</text></view>
+            <view>结束时间:<text> {{item.end_time}}</text></view>
         </view>
     </view>
     <view class='contentBottom'>
