--- a/pages/videoClass/videoClassStuList/videoClassStuList.wxss
+++ b/pages/videoClass/videoClassStuList/videoClassStuList.wxss
@@ -26,6 +26,9 @@
     line-height:60rpx;
     font-size:24rpx;
     text-align:center;
+    overflow: hidden;
+    white-space: nowrap; 
+    text-overflow:ellipsis;
 }
 view.videoClassContent:nth-child(even){
     margin-left:20rpx;
