--- a/pages/actReg/actRegManList/actRegManList.wxss
+++ b/pages/actReg/actRegManList/actRegManList.wxss
@@ -21,6 +21,9 @@ page{
     text-indent:20rpx;
     font-size:30rpx;
     font-weight:bold;
+    overflow: hidden;
+    white-space: nowrap; 
+    text-overflow:ellipsis;
 }
 .manListContentMiddel{
     width:710rpx;
