--- a/pages/baseOptions/schoolList/schoolList.wxml
+++ b/pages/baseOptions/schoolList/schoolList.wxml
@@ -1,8 +1,12 @@
 <view class='schListInfo'>
-    <view class='schListContent' wx:for='{{pageData}}'>
+    <view class='schListContent' wx:for='{{pageData}}' wx:key='{{index}}'>
         <view class='schListInfoImage'><image src='{{item.cover.url}}' mode='scaleToFill'></image></view>
         <view class='schListInfoTitle'>{{item.name}}</view>
-        <view class='schListInfoAddress' bindtap='getAddress' data-name='{{item.name}}' data-address='{{item.address}}' data-latitude='{{item.latitude}}' data-longitude='{{item.longitude}}'><text class='iconfont icon-map- iconStyle0'></text><text decode>&nbsp;联系地址:</text><text decode>&nbsp;&nbsp;{{item.address}}</text></view>
+        <view class='schListInfoAddress'  data-longitude='{{item.longitude}}'><text class='iconfont icon-map- iconStyle0'></text><text decode>&nbsp;联系地址:</text><text decode>&nbsp;&nbsp;{{item.address}}</text></view>
+        <!-- 地图 -->
+        <view class='schListMap'>
+            <map longitude='{{item.longitude}}' latitude='{{item.latitude}}' show-location scale='14' controls bindtap='getAddress' data-name='{{item.name}}' data-address='{{item.address}}' data-latitude='{{item.latitude}}' data-longitude='{{item.longitude}}'></map>
+        </view>
         <view class='schListInfoAddress' bindtap='makePhone' data-phonenum='{{item.telephone}}'><text class='iconfont icon-dianhuatianchong iconStyle' ></text><text decode>&nbsp;联系方式:</text><text decode>&nbsp;&nbsp;{{item.telephone}}</text></view>
         <view class='schListInfoAddress'><text class='iconfont icon-timer iconStyle'></text><text decode>&nbsp;营业时间:</text><text decode>&nbsp;&nbsp;{{item.open_time}}</text></view>
         <view class='schListInfoAddress'><text class='iconfont icon-gongjiao iconStyle'></text><text decode>&nbsp;交通路线:</text><text decode>&nbsp;&nbsp;{{item.traffic}}</text></view>
