--- a/pages/baseOptions/studentStyle/studentStyle.wxml
+++ b/pages/baseOptions/studentStyle/studentStyle.wxml
@@ -1,4 +1,4 @@
 <view wx:for='{{imgData}}' class='wrapView'>
-    <image src='{{item.url}}' mode='aspectFit'></image>
+    <image src='{{item.url}}' mode='widthFix'></image>
     <view class='studentInfo'>{{item.intro}}</view>
 </view>
