--- a/pages/collage/collagePersonInfo/collagePersonInfo.wxss
+++ b/pages/collage/collagePersonInfo/collagePersonInfo.wxss
@@ -23,21 +23,28 @@
 }
 .oneTitle{
     width:710rpx;
-    height:90rpx;
+    min-height:90rpx;
     border-radius:5px 5px 0 0;
     overflow:hidden;
     border-bottom:1rpx solid #efefef;
 }
 .oneTitleChild{
     width:670rpx;
+    min-height:35rpx;
     line-height:35rpx;
     font-size:30rpx;
     border-left:2px solid #913225;
-    text-indent:20rpx;
     margin-left:20rpx;
     font-weight:bold;
     margin-top:30rpx;
     color:#913225;
+    padding-bottom:5rpx;
+}
+.oneTitleChild>text{
+    display:block;
+    width:650rpx;
+    min-height:35rpx;
+    margin-left:20rpx;
 }
 .oneImage{
     width:710rpx;
@@ -165,7 +172,7 @@
     margin:20rpx auto;
     box-shadow:2px 2px 2px 2px rgba(0,0,0,0.3),-2px 2px 2px 2px rgba(0,0,0,0.3);
 }
-.collageInfoTwo text{
+.collageInfoTwo>text{
     display:block;
     width:710rpx;
     line-height:80rpx;
@@ -204,7 +211,6 @@
     color:#7b7b7b;
     font-size:26rpx;
     margin:0rpx auto 0rpx;
-    /* text-indent:30rpx;*/
 } 
 /*活动规则*/
 .collageInfoFour{
@@ -212,7 +218,6 @@
     min-height:300rpx;
     background:#fff;
     border-radius:5px;
-    background:#fff;
     margin:20rpx auto;
     box-shadow:2px 2px 2px 2px rgba(0,0,0,0.3),-2px 2px 2px 2px rgba(0,0,0,0.3);
 }
@@ -297,12 +302,12 @@
     box-shadow:2px 2px 2px 2px rgba(0,0,0,0.3),-2px 2px 2px 2px rgba(0,0,0,0.3);
 }
 .headerRewardContent{
-    width:100%;
+    width:690rpx;
+    margin:10rpx auto 0rpx;
+    min-height:40rpx;
     font-size:26rpx;
     color:#7b7b7b;
     line-height:40rpx;
-    text-indent:20rpx;
-    margin-top:10rpx;
 }
 .noData{
     width:100%;
