--- a/pages/collage/collageSignup/collageSignup.wxml
+++ b/pages/collage/collageSignup/collageSignup.wxml
@@ -1,7 +1,7 @@
 <view class='signUpWrap' hidden='{{isShow}}'>
     <form bindsubmit='submitInfo' >
         <view class='signUpName'>
-            <view class='signUpNameTitle'>联系报名:</view>
+            <view class='signUpNameTitle'>用户姓名:</view>
             <view class='signUpNameInput'>
                 <input type='text' name='nickname' />
             </view>
@@ -12,7 +12,7 @@
                 <input type='number' maxlength='11' name='phone' />
             </view>
         </view>
-        <view class='signUpName' wx:for='{{formInfo}}'>
+        <view class='signUpName' wx:for='{{formInfo}}' wx:key='{{index}}'>
             <view class='signUpNameTitle'>{{item.text}}:</view>
             <view class='signUpNameInput'>
                 <input type='text' name='{{index}}' />
