--- a/pages/collectAct/collectActEdit/collectActEdit.wxss
+++ b/pages/collectAct/collectActEdit/collectActEdit.wxss
@@ -60,6 +60,82 @@ page{
     font-size:26rpx;
     margin-top:20rpx;
 }
+/* 优惠设置 */
+.editActInfoWrap{
+    width:600rpx;
+    min-height:0rpx;
+    margin:20rpx auto 0rpx;
+    border:.5rpx solid #efefef;
+    position:relative;
+}
+
+.editActInfoChild,.editActInfoChildO{
+    width:600rpx;
+    height:70rpx;
+}
+.editActInfoChild>view{
+    width:130rpx;
+    line-height:70rpx;
+    font-size:26rpx;
+    color:#7b7b7b;
+    float:left;
+    text-align:right;
+    margin-left:20rpx;
+}
+.editActInfoChild>view:nth-child(3){
+    margin-left:10rpx;
+}
+.editActInfoChild>input{
+    width:100rpx;
+    height:50rpx;
+    background:#efefef;
+    float:left;
+    margin-top:10rpx;
+    margin-left:15rpx;
+    text-align:center;
+    font-size:28rpx;
+    color:#000;
+}
+.editActInfoChildO>input{
+    width:400rpx;
+    height:50rpx;
+    background:#fff;
+    float:left;
+    margin-top:10rpx;
+    font-size:28rpx;
+    margin-left:85rpx;
+    color:#000;
+}
+.addDiscount{
+   width:250rpx;
+    line-height:60rpx;
+    background:#007AFF;
+    color:#fff;
+    font-size:30rpx;
+    text-align:center;
+    border-radius:5px;
+    margin:20rpx auto;
+}
+.delDiscount{
+    width:50rpx;
+    height:50rpx;
+    position:absolute;
+    right:5rpx;
+    top:5rpx;
+    background:#fff;
+}
+.iconStyle{
+    float:left;
+    margin-left:6rpx;
+    margin-top:5rpx;
+    color:#7b7b7b;
+    font-size:40rpx;
+}
+.empty{
+    width:100%;
+    height:20rpx;
+    background:transparent;
+}
 /* 糖果设置 */
 .editActInfo,.joinInfo,.editImageWrap,.actRuleWrap{
     width:710rpx;
