--- a/pages/collectAct/collectActJoinerList/collectActJoinerList.wxss
+++ b/pages/collectAct/collectActJoinerList/collectActJoinerList.wxss
@@ -1,13 +1,4 @@
 @import '../../../utils/iconFont.wxss'; 
-
-page{
-    height:100%;
-}
-.killPriceListWrap{
-    width:750rpx;
-    min-height:1207rpx;
-    background:#fff;
-}
 .killPriceListContet{
     padding-top:20rpx;
     width:710rpx;
@@ -22,21 +13,16 @@ page{
     width:100%;
     height:60rpx;
 }
-.killPriceListTop>text:nth-child(2){
+.killPriceListTop text:nth-child(2){
     float:right;
     margin-right:20rpx;
     font-size:30rpx;
     color:#7b7b7b;
     line-height:60rpx;
 }
-.killPriceListTop>text:nth-child(1),.killPriceListBottom text:nth-child(1){
+.killPriceListTop text:nth-child(1),.killPriceListBottom text:nth-child(1){
     float:left;
     margin-left:20rpx;
-}
-.killPriceListTop>text:nth-child(1){
-    overflow: hidden;
-    white-space: nowrap; 
-    text-overflow:ellipsis;
 }
 .iconColor{
     color:#5CBBF2;
@@ -51,7 +37,17 @@ page{
     margin-right:25rpx;
     color:rgba(0,0,0,0.6);
 }
-
+/* 无记录 */
+.noData{
+    width:100%;
+    height:60rpx;
+    font-size:26rpx;
+    color:#7b7b7b;
+    text-align:center;
+    line-height:60rpx;
+    background:transparent;
+}
+/* 用户信息 */
 .collageListWrap{
     width:750rpx;
     height:100%;
@@ -99,14 +95,4 @@ page{
 }
 .price{
     color:#C41A16;
-}
-
-.noData{
-    width:100%;
-    height:60rpx;
-    font-size:26rpx;
-    color:#7b7b7b;
-    text-align:center;
-    line-height:60rpx;
-    background:transparent;
 }
