--- a/pages/courses/stuCourseList/stuCourseList.wxss
+++ b/pages/courses/stuCourseList/stuCourseList.wxss
@@ -30,6 +30,9 @@
     line-height:40rpx;
     font-size:30rpx;
     font-weight:bold;
+    overflow: hidden;
+    white-space: nowrap; 
+    text-overflow:ellipsis;
 }
 .courseListRightBottom{
     width:390rpx;
