--- a/pages/goodLesson/lessonListInfo/lessonListInfo.wxss
+++ b/pages/goodLesson/lessonListInfo/lessonListInfo.wxss
@@ -52,10 +52,12 @@ page{
     overflow:hidden;
 }
 .listInfoImageRightTop{
-    font-size:34rpx;
+    font-size:32rpx;
     line-height:50rpx;
     color:#000;
-    font-weight:bold;
+    overflow: hidden;
+    white-space: nowrap; 
+    text-overflow:ellipsis;
 }
 .listInfoImageRightMiddle{
     font-size:28rpx;
@@ -112,12 +114,13 @@ page{
     height:180rpx;
     border-bottom:1rpx solid #efefef;
 }
-.listInfoDataInfo text{
+.listInfoDataInfo>text{
     display:block;
     line-height:60rpx;
-    font-size:28rpx;
+    font-size:26rpx;
     color:#7b7b7b;
     text-indent:20rpx;
+    overflow:hidden;
 }
 .listInfoDataActimg{
     width:100%;
@@ -215,10 +218,11 @@ page{
 
 .listInfoDataText{
     width:670rpx;
-    min-height:60rpx;
+    min-height:40rpx;
+    line-height:40rpx;
     margin:0 auto;
-    font-size:30rpx;
-    color:#181818;
+    font-size:26rpx;
+    color:#7b7b7b;
 }
 .signUpWrap{
     width:750rpx;
