--- a/pages/studentManage/orderList/orderList.wxss
+++ b/pages/studentManage/orderList/orderList.wxss
@@ -1,6 +1,4 @@
-.orderListWrap{
-    width:750rpx;
-    min-height:1207rpx;
+page{
     background:#f2f2f2;
     padding-bottom:20rpx;
 }
@@ -15,16 +13,16 @@
     height:80rpx;
     background:#fff;
 }
-.orderListTop view{
+.orderListTop>view{
     font-size:30rpx;
     float:left;
 }
-.orderListTop view:nth-child(1){
+.orderListTop>view:nth-child(1){
     line-height:80rpx;
     margin-left:20rpx;
     color:#41A7D9;
 }
-.orderListTop view:nth-child(2){
+.orderListTop>view:nth-child(2){
     float:right;
     color:#7b7b7b;
     font-size:24rpx;
@@ -44,6 +42,8 @@
     margin-top:30rpx;
     margin-left:20rpx;
     overflow:hidden;
+    white-space: nowrap; 
+    text-overflow:ellipsis;
 }
 .orderListMiddleImage image{
     width:240rpx;
