--- a/pages/videoClass/videoClassManList/videoClassManList.wxss
+++ b/pages/videoClass/videoClassManList/videoClassManList.wxss
@@ -36,6 +36,9 @@ view.manListWrap:nth-child(1){
     width:470rpx;
     height:40rpx;
     font-size:26rpx;
+    overflow: hidden;
+    white-space: nowrap; 
+    text-overflow:ellipsis;
 }
 .manListOther{
     width:400rpx;
